# FORGE7

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/App/: AppConfig.cpp  AppConfig.h  AppContext.h  DevToolsWindow.cpp  DevToolsWindow.h  ForgeApplication.cpp  ForgeApplication.h  MainComponent.cpp  MainComponent.h  ProjectSession.cpp  ProjectSession.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  ChainMeterTaps.h  CrossfadeMixer.cpp  CrossfadeMixer.h  TunerPitchAnalyzer.cpp  TunerPitchAnalyzer.h
Source/Controls/: ChainChordDetector.cpp  ChainChordDetector.h  ControlManager.cpp  ControlManager.h  EncoderFocusTypes.h  EncoderNavigator.cpp  EncoderNavigator.h  HardwareControlState.cpp  HardwareControlState.h  HardwareControlTypes.h  KeyboardHardwareSimulator.cpp  KeyboardHardwareSimulator.h  MidiControlInput.cpp  MidiControlInput.h  MidiHardwareMapping.cpp  MidiHardwareMapping.h  ParameterMappingDescriptor.cpp  ParameterMappingDescriptor.h  ParameterMappingManager.cpp  ParameterMappingManager.h  SerialControlInput.h  UsbSerialHardwareBridge.cpp  UsbSerialHardwareBridge.h
Source/Drivers/: HardwareAbstraction.h
Source/GUI/: AudioHealthMonitor.cpp  AudioHealthMonitor.h  ChainControlsPanelComponent.cpp  ChainControlsPanelComponent.h  CpuMeter.cpp  CpuMeter.h  FullscreenPluginEditorComponent.cpp  FullscreenPluginEditorComponent.h  HardwareAssignableUi.h  LevelMeter.cpp  LevelMeter.h  NameEntryModal.cpp  NameEntryModal.h  NavigationStatus.cpp  NavigationStatus.h  PerformanceViewComponent.cpp  PerformanceViewComponent.h  PluginBrowserComponent.cpp  PluginBrowserComponent.h  PluginEditorCanvas.cpp  PluginEditorCanvas.h  PluginEditorHostWindow.cpp  PluginEditorHostWindow.h  PluginEditorViewportFrame.cpp  PluginEditorViewportFrame.h  PluginInspectorComponent.cpp  PluginInspectorComponent.h  ProjectLibraryDialogs.cpp  ProjectLibraryDialogs.h  ProjectSceneBrowserComponent.cpp  ProjectSceneBrowserComponent.h  RackSlotCard.cpp  RackSlotCard.h  RackViewComponent.cpp  RackViewComponent.h  SettingsComponent.cpp  SettingsComponent.h  SimulatedControlsComponent.cpp  SimulatedControlsComponent.h  TunerOverlayComponent.cpp  (+6 more)
Source/Platform/: MacAudioPermission.cpp  MacAudioPermission.h  MacAudioPermission.mm
Source/PluginHost/: BridgedPluginManager.cpp  BridgedPluginManager.h  PluginChain.cpp  PluginChain.h  PluginHostManager.cpp  PluginHostManager.h  PluginScanSkipStore.cpp  PluginScanSkipStore.h  PluginSlot.cpp  PluginSlot.h
Source/Scene/: ChainVariation.cpp  ChainVariation.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Source/Storage/: ForgeStoragePaths.cpp  ForgeStoragePaths.h  ProjectBrowserMetadata.cpp  ProjectBrowserMetadata.h  ProjectSerializer.cpp  ProjectSerializer.h
Source/Utilities/: DebugSessionLog.h  Logger.cpp  Logger.h
cmake/: Info-Microphone.plist
docs/: ARCHITECTURE.md  BUILD_LINUX.md  EMBEDDED_UX.md  USER_WORKFLOWS.md
scripts/: check_ascii_ui_text.py
